# internal-system-app

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  config.ini.example  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  modules.rs
src-tauri/src/app/: consts.rs  error.rs  result.rs
src-tauri/src/commands/: ai_chat_commands.rs  ai_cowork_commands.rs  ai_task_commands.rs  ai_translate_cowork_commands.rs  ai_usage_commands.rs  ai_workflow_commands.rs  api_key_commands.rs  app_config_commands.rs  auth_commands.rs  backlog_commands.rs  collect_commands.rs  daily_note_commands.rs  daily_report_commands.rs  db_config_commands.rs  excel2md_commands.rs  explorer_commands.rs  import_commands.rs  issue_csv_commands.rs  menu_config_commands.rs  menu_permission_commands.rs  mod.rs  monthly_report_commands.rs  project_commands.rs  role_commands.rs  s3_commands.rs  schedule_commands.rs  settings_commands.rs  sql_editor_commands.rs  statistics_commands.rs  sync_commands.rs  system_commands.rs  user_commands.rs  xlsx_markdown_commands.rs
src-tauri/src/database/: ai_account_store.rs  ai_cowork_store.rs  ai_profile_store.rs  ai_task_store.rs  ai_translate_cowork_store.rs  ai_workflow_store.rs  api_key_store.rs  auth_store.rs  aws_storage_store.rs  csv_reader.rs  daily_note_store.rs  daily_report_store.rs  download_store.rs  menu_config_store.rs  menu_permission_store.rs  mod.rs  project_store.rs  report_store.rs  role_store.rs  settings_store.rs  sql_connection_store.rs  startup_store.rs  upload_store.rs  user_store.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/models/: ai_chat.rs  ai_task.rs  ai_usage.rs  ai_workflow.rs  app_config.rs  auth.rs  backlog.rs  collect.rs  daily_note.rs  daily_report.rs  db_config.rs  excel2md.rs  explorer.rs  import_csv.rs  issue_csv.rs  menu_config.rs  menu_permission.rs  monthly_report.rs  project.rs  role.rs  s3.rs  schedule.rs  settings.rs  sql_editor.rs  sync.rs  system.rs  user.rs
src-tauri/src/services/: ai_chat_service.rs  ai_cowork_service.rs  ai_task_service.rs  ai_translate_cowork_service.rs  ai_usage_capture.rs  ai_usage_detect.rs  ai_usage_probe.rs  ai_usage_service.rs  ai_workflow_service.rs  app_config_service.rs  auth_service.rs  backlog_service.rs  collect_folders_service.rs  mod.rs  (+24 more)
(+384 files in other folders)
