[package]
name = "pjjyuji_project_statistics"
version = "0.1.0"
description = "Desktop statistics app for PJ Yuji CSV data"
authors = ["internal"]
edition = "2021"

[lib]
name = "management_systems"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
