[package]
name = "management_systems"
version = "1.0.7"
description = "Management Systems"
authors = ["internal"]
edition = "2021"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
rust-ini = "0.21"
bcrypt = "0.17"
regex = "1"
jwalk = "0.8"
urlencoding = "2"
dirs = "5"
calamine = { version = "0.26", features = ["dates"] }
